<?xml version="1.0"?>
<package format="2">
  <name>chainercv</name>
  <version>0.0.1</version>
  <description>
    ChainerCV with Catkin
  </description>
  <maintainer email="asmodehn@gmail.com">AlexV</maintainer>
  <author>Yusuke Niitani</author>
  <license>MIT</license>
  <url type="repository">https://github.com/yuyu2172/chainercv-ros.git</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend version_gte="0.1.16">catkin_pip</build_depend>

</package>
