<?xml version="1.0"?>
<package format="2">
  <name>chainercv</name>
  <version>0.0.1</version>
  <description>
    ChainerCV ROS Wrapper
  </description>
  <maintainer email="shingogo.5511@gmail.com">Shingo Kitagawa</maintainer>
  <author>Shingo Kitagawa</author>
  <author>Yusuke Niitani</author>
  <author>Kei Okada</author>
  <license>MIT</license>
  <url type="repository">https://github.com/knorth55/ros_chainercv</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>catkin_virtualenv</build_depend>

  <export>
    <pip_requirements>requirements.txt</pip_requirements>
  </export>

</package>
